--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,7 +118,10 @@ jobs:
     if: github.event_name == 'pull_request'
 
     steps:
+      - name: Checkout
       - uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
 
       - name: Install tools
         run: brew install danger/tap/danger-swift
