--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,19 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    name: Test on macOS
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Lint
+        run: swiftlint
+
   test-on-macos:
     name: Test on macOS
     runs-on: macos-latest
@@ -39,31 +52,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-spm-
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v2
-        with:
-          path: .sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Lint
-        run: |
-          swiftlint --reporter json > swiftlint.result.json
-
       - name: Build and test
-        run: swift test --enable-code-coverage
-
-      - name: Generate Code Coverage report
-        run: xcrun llvm-cov show .build/debug/UKPoliceDataPackageTests.xctest/Contents/MacOS/UKPoliceDataPackageTests -instr-profile .build/debug/codecov/default.profdata Sources/ > info.lcov
-
-      - name: Install SonarScanner
-        run: brew install sonar-scanner
-
-      - name: SonarCloud Scan
-        run: sonar-scanner -Dsonar.projectKey=adamayoung_UKPoliceData -Dsonar.organization=adamayoung -Dsonar.host.url="https://sonarcloud.io" -Dsonar.sources=Sources -Dsonar.swift.coverage.reportPaths=info.lcov -Dsonar.swift.swiftLint.reportPaths=swiftlint.result.json
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: swift test
   
   test-on-ios:
     name: Test on iOS
@@ -112,19 +102,56 @@ jobs:
       - name: Build and test
         run: swift test --enable-test-discovery
 
-  danger: 
-    name: "Run Danger"
+  analysis:
+    name: Analysis
     runs-on: macos-latest
-    if: github.event_name == 'pull_request'
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Cache SPM
+        uses: actions/cache@v2
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v2
+        with:
+          path: .sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
       - name: Install tools
-        run: brew install danger/tap/danger-swift
+        run: |
+          brew install sonar-scanner
+          brew install danger/tap/danger-swift
+
+      - name: Lint
+        run: |
+          set -o pipefail && swiftlint --reporter json > swiftlint.result.json
+
+      - name: Build and test
+        run: set -o pipefail && swift test --enable-code-coverage
+
+      - name: Generate Code Coverage report
+        run: xcrun llvm-cov show .build/debug/UKPoliceDataPackageTests.xctest/Contents/MacOS/UKPoliceDataPackageTests -instr-profile .build/debug/codecov/default.profdata Sources/ > info.lcov
+
+      - name: SonarCloud Scan
+        run: sonar-scanner -Dsonar.projectKey=adamayoung_UKPoliceData -Dsonar.organization=adamayoung -Dsonar.host.url="https://sonarcloud.io" -Dsonar.sources=Sources -Dsonar.swift.coverage.reportPaths=info.lcov -Dsonar.swift.swiftLint.reportPaths=swiftlint.result.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Danger
         run: danger-swift ci
