--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           fetch-depth: 0
 
       - name: Lint
-        run: swiftlint
+        run: swiftlint --strict
 
   test-on-macos:
     name: Test on macOS
