--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   danger:
     name: Run Danger
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -26,11 +26,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install tools
-        run: brew install danger/tap/danger-swift
-      
       - name: Danger
-        run: danger-swift ci -f
+        uses: docker://ghcr.io/danger/danger-swift-with-swiftlint:3.10.1
+        with:
+            args: --failOnErrors
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -43,11 +42,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
 
       - name: Cache SPM
         uses: actions/cache@v2
