--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   lint:
     name: Lint
-    runs-on: macos-latest
+    runs-on: macos-11
     if: github.event_name == 'pull_request'
 
     steps:
@@ -32,7 +32,7 @@ jobs:
 
   danger:
     name: Run Danger
-    runs-on: macos-latest
+    runs-on: macos-11
     if: github.event_name == 'pull_request'
 
     steps:
@@ -51,7 +51,7 @@ jobs:
 
   test-on-macos:
     name: Test on macOS
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
       - name: Checkout
@@ -72,7 +72,7 @@ jobs:
   
   test-on-ios:
     name: Test on iOS
-    runs-on: macos-latest
+    runs-on: macos-11
     if: github.event_name == 'pull_request'
 
     steps:
@@ -119,7 +119,7 @@ jobs:
 
   analysis:
     name: Analysis
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
       - name: Checkout
