--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -81,13 +81,34 @@ jobs:
       - name: Build and test
         run: xcodebuild -scheme UKPoliceData -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12 Pro,OS=14.4' test
   
+  test-on-watchos:
+    name: Test on watchOS
+    runs-on: macos-11
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
+      - name: Build and test
+        run: xcodebuild -scheme UKPoliceData -sdk watchsimulator -destination 'platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=7.4' test
+  
   test-on-linux:
     name: Test on Linux
     runs-on: ubuntu-latest
     container:
       image: swift:5.3
       options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
