--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,6 +7,9 @@ on:
     paths-ignore:
       - 'README.md'
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
+
 jobs:
   lint:
     name: Lint
@@ -100,7 +103,7 @@ jobs:
             ${{ runner.os }}-spm-
 
       - name: Build and test
-        run: xcodebuild -scheme UKPoliceData -sdk watchsimulator -destination 'platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=7.2' test
+        run: xcodebuild -scheme UKPoliceData -sdk watchsimulator -destination 'platform=watchOS Simulator,name=Apple Watch Series 6 - 44mm,OS=7.4' test
   
   test-on-linux:
     name: Test on Linux
