--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -10,8 +10,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-on-macos:
-    name: Test on macOS
+  test:
+    name: Test
     runs-on: macos-11
 
     steps:
@@ -30,3 +30,52 @@ jobs:
 
       - name: Build and test
         run: swift test
+
+  analysis:
+    name: Analysis
+    runs-on: macos-11
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Cache SPM
+        uses: actions/cache@v2
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v2
+        with:
+          path: .sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Install tools
+        run: brew install sonar-scanner
+
+      - name: Lint
+        run: |
+          set -o pipefail && swiftlint --reporter json > swiftlint.result.json
+
+      - name: Build and test
+        run: set -o pipefail && swift test --enable-code-coverage
+
+      - name: Generate Code Coverage report
+        run: xcrun llvm-cov show .build/debug/UKPoliceDataPackageTests.xctest/Contents/MacOS/UKPoliceDataPackageTests -instr-profile .build/debug/codecov/default.profdata Sources/ > info.lcov
+
+      - name: SonarCloud Scan
+        run: sonar-scanner -Dsonar.projectKey=adamayoung_UKPoliceData -Dsonar.organization=adamayoung -Dsonar.host.url="https://sonarcloud.io" -Dsonar.sources=Sources -Dsonar.swift.coverage.reportPaths=info.lcov -Dsonar.swift.swiftLint.reportPaths=swiftlint.result.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
