FEATURE: Async/Await support (#50)

--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Mainline
 
 on:
   push:
@@ -7,50 +7,11 @@ on:
     paths-ignore:
       - 'README.md'
 
-  pull_request:
-    branches:
-      - main
-    paths-ignore:
-      - 'README.md'
-
   workflow_dispatch:
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: macos-11
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: swiftlint
-        run: swiftlint --strict
-
-  danger:
-    name: Run Danger
-    runs-on: macos-11
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Install tools
-        run: brew install danger/tap/danger-swift
-      
-      - name: Danger
-        run: danger-swift ci -f
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  test-on-macos:
-    name: Test on macOS
+  test:
+    name: Test
     runs-on: macos-11
 
     steps:
@@ -69,53 +30,6 @@ jobs:
 
       - name: Build and test
         run: swift test
-  
-  test-on-ios:
-    name: Test on iOS
-    runs-on: macos-11
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: .build
-          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
-          restore-keys: |
-            ${{ runner.os }}-spm-
-      
-      - name: Build and test
-        run: xcodebuild -scheme UKPoliceData -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12 Pro,OS=14.4' test
-  
-  test-on-linux:
-    name: Test on Linux
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    container:
-      image: swift:5.3
-      options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: .build
-          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
-          restore-keys: |
-            ${{ runner.os }}-spm-
-
-      - name: Build and test
-        run: swift test --enable-test-discovery
 
   analysis:
     name: Analysis
