--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
   build-test:
     name: Build and Test
-    runs-on: macos-12
+    runs-on: macos-13-xl
     steps:
       - name: Checkout
         uses: actions/checkout@v3
