--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,9 @@ concurrency:
   group: "documentation"
   cancel-in-progress: true
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
+
 jobs:
   deploy:
     name: Deploy
