--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,29 @@ jobs:
         run: swift build -Xswiftc -warnings-as-errors --build-tests
 
       - name: Test
-        run: swift test --skip-build --parallel
+        run: swift test --skip-build --parallel --filter PoliceDataKitTests 
+
+  integration-test:
+    name: Integration Test
+    runs-on: macos-13
+    needs: build-test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Cache SPM
+        uses: actions/cache@v3
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
+      - name: Build
+        run: swift build -Xswiftc -warnings-as-errors --build-tests
+
+      - name: Test
+        run: swift test --skip-build --filter IntegrationTests
 
   codeScan:
     name: Code Scan
