--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    # Every day at 12am
+    - cron:  '0 0 * * *'
   workflow_dispatch:
 
 concurrency:
