--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,26 +39,7 @@ jobs:
         run: swift build -Xswiftc -warnings-as-errors --build-tests
 
       - name: Test
-        run: swift test --skip-build --parallel
-
-  codeScan:
-    name: Code Scan
-    runs-on: ubuntu-latest
-    permissions:
-        security-events: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Scan
-        uses: MobSF/mobsfscan@main
-        with:
-          args: '. --sarif --output results.sarif || true'
-
-      - name: Upload report
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: results.sarif
+        run: swift test --skip-build --parallel --filter PoliceDataKitTests 
 
   build-documentation:
     name: Build Documentation
