--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,9 +1,9 @@
 name: Documentation
 
 on:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -13,14 +13,14 @@ permissions:
 
 concurrency:
   group: "documentation"
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 env:
   DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
 
 jobs:
   deploy:
-    name: Deploy
+    name: Deploy Documentation
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}documentation/policedatakit
