--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,7 +11,7 @@ on:
 
 concurrency:
   group: "integration-${{ github.head_ref || github.run_id }}"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 env:
   DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
