--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,22 @@ env:
   DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
 
 jobs:
+  markdown-lint:
+    name: Markdown Lint
+    runs-on: macos-13
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Install markdownlint-cli
+        run: brew install markdownlint-cli
+      
+      - name: Lint README
+        run: markdownlint README.md
+      
+      - name: Lint DocC files
+        run: markdownlint **/*.docc/**/*.md
+      
   build-test:
     name: Build and Test
     runs-on: macos-13
