--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,17 +62,19 @@ jobs:
       - name: Set Device
         run: |
           device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          echo "platform=iOS Simulator,name=$device" | cat >destination
+          echo $device | cat >device
       
       - name: Build
         env:
-          destination: ${{ 'destination' }}
-        run: xcodebuild -scheme PoliceDataKit -destination "$destination" -parallelizeTargets build-for-testing
+          platform: "iOS Simulator"
+          device: ${{ 'device' }}
+        run: xcodebuild -scheme PoliceDataKit -destination "platform=$platform,name=$device" -parallelizeTargets build-for-testing
 
       - name: Test
         env:
-          destination: ${{ 'destination' }}
-        run: xcodebuild -scheme PoliceDataKit -destination "$destination" -parallel-testing-enabled YES -only-testing:PoliceDataKitTests test-without-building
+          platform: "iOS Simulator"
+          device: ${{ 'device' }}
+        run: xcodebuild -scheme PoliceDataKit -destination "platform=$platform,name=$device" -parallel-testing-enabled YES -only-testing:PoliceDataKitTests test-without-building
 
   build-documentation:
     name: Build Documentation
