--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ env:
   DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
 
 jobs:      
-  build-test-macos:
-    name: Build and Test (macOS)
+  build-test:
+    name: Build and Test
     runs-on: macos-13
     steps:
       - name: Checkout
@@ -43,23 +43,6 @@ jobs:
       
       - name: Build for Release
         run: swift build -c release -Xswiftc -warnings-as-errors
-  
-  build-test-ios:
-    name: Build and Test (iOS)
-    runs-on: macos-13
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-    
-      - name: Build
-        run: |
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          xcodebuild -scheme PoliceDataKit -destination "platform=iOS Simulator,name=$device" -parallelizeTargets build-for-testing
-
-      - name: Test
-        run: |
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          xcodebuild -scheme PoliceDataKit -destination "platform=iOS Simulator,name=$device" -parallel-testing-enabled YES -only-testing:PoliceDataKitTests test-without-building
 
   build-documentation:
     name: Build Documentation
