--- a/.github/workflows/ci-documentation.yml
+++ b/.github/workflows/ci-documentation.yml
@@ -10,10 +10,13 @@ concurrency:
   group: "ci-documentation-${{ github.head_ref || github.run_id }}"
   cancel-in-progress: true
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_15.2.app/Contents/Developer
+
 jobs:
   build-documentation:
     name: Build Documentation
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     env:
       SWIFTCI_DOCC: 1
     steps:
