--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,8 +22,7 @@ concurrency:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
-    container: swift:5.9.2-jammy
+    runs-on: macos-14
     steps:
       - name: Checkout
         uses: actions/checkout@v4
